--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <script src="js/react.0.9.0.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=0.67, maximum-scale=0.67, user-scalable=no">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
